--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,10 +3,60 @@ div {
 }
 .heading {
   display: block;
-  height: 30vh;
-  background-color: gray;
+  height: 20vh;
+  background-color: lightyellow;
 }
 
 .container {
   margin: 5vh auto;
+}
+#image-render {
+  display: inline-block;
+  margin: 20px;
+  /* position: relative;
+  left: 20vw; */
+}
+.form-group {
+  display: inline-block;
+}
+
+.main-container {
+  text-align: center;
+}
+p {
+  display: inline-block;
+  margin: 20px;
+  border: 2px dotted black;
+  border-radius: 5px;
+  padding: 20px;
+}
+body {
+  background-color: lightcyan;
+}
+#image-render-after {
+  margin: 30px;
+}
+#image-render-before {
+  margin: 30px;
+}
+.navbar-brand {
+  margin-right: 30px;
+}
+#navb {
+  background-color: bisque;
+}
+.aws {
+  color: coral;
+  font-size: 8vh;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
+    0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
+}
+
+.aws {
+  text-align: center;
 }
