optimised code and removed unwanted files

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,141 +4,125 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Poor man's Rekog</title>
+    <title>Poor Man's Rekog</title>
+
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="../jquery.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="../static/js/index.js"></script>
+    <link rel="stylesheet" href="../static/css/index.css" />
   </head>
   <body>
-    <h1 id="poormansrekognition">Poor man's Rekognition</h1>
-
-    <p>
-      Open source alternative to Amazon Rekognition offered by AWS. Currently,
-      can identify 1081 clebrity faces. <br />
-      Uses deep metric learning instead of deep learning for face identificaton.
-    </p>
-
-    <h2 id="quicksetup">Quick setup</h2>
-
-    <ol>
-      <li>create virtual env, install requirements</li>
-
-      <li>Run flask server (<code>python driver.py</code>)</li>
-
-      <li>This is a REST application. Fire up POSTMAN</li>
-    </ol>
-
-    <h3 id="routedescriptions">Route descriptions</h3>
-
-    <pre><code>POST /recogniseFaces
-</code></pre>
-
-    <p>
-      (Set form type to be form-data) <br />
-      params::
-    </p>
-
-    <p>
-      <code>"image": (The__image_file)</code> [Choose 'file' in the drop down
-      that appears besides the key input field][or] <br />
-      <code>"video": (The_video_file)</code> [Attach the video file]
-    </p>
-
-    <p>(Note): If both parameters are set, only the image is processed.</p>
-
-    <p>
-      Return values: <br />
-      In case of an image, a JSON string will likeliness of each face is
-      returned. <br />
-      In case of a video, a JSON string indicating the result is returned.
-    </p>
-
-    <pre><code>GET /recogniseFaces
-</code></pre>
-
-    <p>
-      (Returns the latest saved image/video) <br />
-      params::
-    </p>
-
-    <p>
-      <code>"image"</code> : If image parameter is set, then the latest
-      processed image is returned. <br />
-      [OR] <br />
-      <code>"video"</code> : If video parameter is set, then the latest
-      processed video is returned.
-    </p>
-
-    <p>
-      (Note): If both parameters are set, only the image is returned. This
-      returns the processed image.(A label for each bounded box for each face.
-      The descriptions of the label are returned through the post request).
-    </p>
-
-    <pre><code>GET  /names
-</code></pre>
-
-    <p>(no params)</p>
-
-    <p>
-      Return values: A JSON string with the names of all celebrities that can be
-      recognised
-    </p>
-
-    <pre><code>POST /feedback
-</code></pre>
-
-    <p>
-      (Lets you tune the model with your feedback) <br />
-      params::
-    </p>
-
-    <p>
-      <code>"image" : (The_image_file)</code> [Choose 'file' in the drop down
-      that appears besides the key input field. Put body type to be Form-data]
-      <br />
-      <code
-        >"name" : (A String that has underscores instead of spaces and all
-        small)</code
+    <div>
+      <nav
+        class="navbar navbar-default navbar-fixed-top navbar-collapse navbar-toggler"
       >
-      <br />
-      (This is the name that you want the model to understand, as the person in
-      the pic)
-    </p>
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Poor Man's Rekognition</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#about">About</a></li>
+            <li><a href="#image-descri">Image</a></li>
+            <!-- <li><a href="#video-descri">Video</a></li>
+            <li><a href="#">Feedback</a></li> -->
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-    <p>
-      (Note): Make sure you get the names of all people first before using the
-      get route. That will help you fine tune already existing celebrity faces.
-      <br />
-      The model will predict with less confidence next time. The more images you
-      give of a single person, the more the confidence turns in your favour.
-    </p>
+    <hr />
+    <div class="about" id="about">
+      <div class="para">
+        <p class="para-heading">About</p>
+        This is my proof of concept for the Poor Man's Rekognition Project for
+        GSOC'19. It can recognise 1081 celebrity faces. The model uses dlib's
+        frontal face detector and can detect front views of the face, using the
+        Histogram of Orineted Gradients (hog) detection method. The backend is
+        written in Flask.The model is capable of recognising faces in an image,
+        in a video and is capable of tuning its parameters for feedback.
+        <br /><br />
+        Source code:
+        <a href="https://github.com/gigatesseract/Celekt" target="_blank"
+          >here</a
+        >
+      </div>
+    </div>
+    <hr />
+    <div class="image-container" id="image-descri">
+      <div class="canvas">
+        <canvas id="imagecanvas" width="300" height="300">
+          > Your browser does not support the HTML5 canvas tag.
+        </canvas>
+      </div>
+      <div class="image-para">
+        <p class="para-heading">Image Recognition</p>
 
-    <p>Return value: A JSON string indicating success or failure</p>
+        A post request that returns the coordinates of bounded box of each face,
+        and likeliness of celebrity-resemblance for each face in an image <br />
 
-    <p>
-      dataset accumulated using my
-      <a href="https://github.com/gigatesseract/GImageScrape"
-        >image scraping tool</a
-      >
-      <br />
-      link to dataset:
-      <a
-        href="https://drive.google.com/open?id=1NpuNBH6FNwPTXpxxPZ-xbqh3YhowcbF5"
-        >here</a
-      >
-      <br />
-      link to input/output files:
-      <a
-        href="https://drive.google.com/open?id=1n7_gZiYdT1nfJMj-oUqMKrORQtMCle1v"
-        >here</a
-      >
-    </p>
+        <div class="imageform">
+          <form
+            method="POST"
+            action="javascript:void(null);"
+            enctype="multipart/form-data"
+            id="image-form"
+            class="form-inline"
+          >
+            <div class="form-group">
+              <input
+                type="file"
+                class="d-inline"
+                id="image"
+                aria-describedby="image"
+                name="image"
+                onchange="readURL(this);"
+              />
+            </div>
 
-    <h6
-      id="canrecognise1081ceberitiestrainedon21592imagesnamesaregiveninknown_celebritiestxt"
-    >
-      Can recognise 1081 ceberities, trained on 21592 images. (Names are given
-      in known_celebrities.txt)
-    </h6>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="image-card-container">
+          <div class="image-likeliness" id="image-likeliness"></div>
+        </div>
+      </div>
+    </div>
 
-    <p>Have fun! :smiley: :smiley: :smiley:</p>
+    <hr />
+    <div class="video" id="video-descri">
+      <div class="para">
+        <p class="para-heading">Video recognition</p>
+        A POST request with a video. A processed video is returned. (Note: the
+        audio is stripped off. Processing takes time because the server isn't
+        powerful enough. (Can process 4-5 frames per second))
+        <br />
+        <div class="imageform">
+          <form
+            method="POST"
+            action="javascript:void(null);"
+            enctype="multipart/form-data"
+            id="video-form"
+            class="form-inline"
+          >
+            <div class="form-group">
+              <input
+                type="file"
+                class="d-inline"
+                id="image"
+                aria-describedby="image"
+                name="video"
+              />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
