added links to various files

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,10 @@
         Source code:
         <a href="https://github.com/gigatesseract/Celekt" target="_blank"
           >here</a
-        >
+        ><br>
+        link to dataset: <a href = "https://drive.google.com/open?id=1NpuNBH6FNwPTXpxxPZ-xbqh3YhowcbF5" target = "_blank">here</a> <br> 
+        link to input/output files: <a href= "https://drive.google.com/open?id=1n7_gZiYdT1nfJMj-oUqMKrORQtMCle1v" target = "_blank">here</a><br>
+        The dataset was accumulated using my <a href="https://github.com/gigatesseract/GimageScrape" target = "_blank">image scraper tool</a> and hence is less in number (approx. 20/face) and is of low resolution.
       </div>
     </div>
     <hr />
