--- a/poormanrekog/static/css/index.css
+++ b/poormanrekog/static/css/index.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  /* min-width: 00px; */
+  min-width: 30spurce emv/bin/acti0px;
 }
 button {
   margin: 20px;
