--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- <script src="../jquery.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="poormanrekog/static/js/index.js"></script>
-    <link rel="stylesheet" href="poormanrekog/static/css/index.css" />
+    <script src="static/js/index.js"></script>
+    <link rel="stylesheet" href="static/css/index.css" />
   </head>
   <body>
     <div>
