navbar-fixed-top

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -280,7 +280,7 @@
           <div class="name-result" id="name-result"></div>
           </div>
     </div>
-    <hr>
+    
 
    
   </body>
